--- a/src/app/team/team-overview/team-overview.component.html
+++ b/src/app/team/team-overview/team-overview.component.html
@@ -1,11 +1,24 @@
-<form class="example-form">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Assignee</mat-label>
-    <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
-    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-        {{option.name}}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-</form>
+<div class="container">
+  <form class="example-form">
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Assignee</mat-label>
+      <input type="text" matInput #pokemonSelectorInput [formControl]="myControl" [matAutocomplete]="auto">
+      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="onSelectedPokemon($event)">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+          {{option.name}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </form>
+
+  <div>
+    <h1>Selected: {{selectedPokemon.name}}</h1>
+    <h2>Selected pokemon list:</h2>
+    <ul>
+      <li *ngFor="let pokemon of selectedPokemons">
+        {{ pokemon.name }}
+      </li>
+    </ul>
+  </div>
+
+</div>
