--- a/src/app/team/team-overview/team-overview.component.html
+++ b/src/app/team/team-overview/team-overview.component.html
@@ -12,7 +12,7 @@
   </form>
 
   <div>
-    <h1>Selected: {{selectedPokemon.name}}</h1>
+    <pbt-selected-pokemon [selectedPokemon]="selectedPokemon"></pbt-selected-pokemon>
     <h2>Selected pokemon list:</h2>
     <ul>
       <li *ngFor="let pokemon of selectedPokemons">
